add controlnet models

--- a/ipynb/ComfyUI/OneClick-ComfyUI-for-Openbayes.ipynb
+++ b/ipynb/ComfyUI/OneClick-ComfyUI-for-Openbayes.ipynb
@@ -798,6 +798,136 @@
     },
     {
       "cell_type": "markdown",
+      "id": "b33c214b-3a50-4980-8e63-e06e796cbac4",
+      "metadata": {},
+      "source": [
+        "# \u5b89\u88c5\u81ea\u5b9a\u4e49\u8282\u70b9"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "b224635d-08b4-4979-a332-73d7d544480b",
+      "metadata": {},
+      "source": [
+        "## ControlNet\u9884\u5904\u7406\u5668\u8282\u70b9"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "1e437853-66a5-44aa-ab69-d201e36b8bc4",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "custom_nodes_dir = os.path.join(root_dir,'ComfyUI/custom_nodes/')\n",
+        "\n",
+        "# \u5728\u5b89\u88c5\u524d\u68c0\u67e5\u6587\u4ef6\u5939\u662f\u5426\u5b58\u5728\u7684\u51fd\u6570\n",
+        "def check_folder_and_git_clone(folder_name, git_repo):\n",
+        "    if not os.path.exists(folder_name):\n",
+        "        os.system(f'git clone {git_repo}')\n",
+        "\n",
+        "# \u5728\u5b89\u88c5\u524d\u68c0\u67e5mmcv\u6587\u4ef6\u5939\u662f\u5426\u5b58\u5728\n",
+        "mmcv_dir = os.path.join(root_dir,'mmcv')\n",
+        "\n",
+        "check_folder_and_git_clone(mmcv_dir, 'https://github.com/open-mmlab/mmcv.git')\n",
+        "\n",
+        "mvcc_install_cmd = (' ').join(base_args[:] + [\n",
+        "    f'cd {mmcv_dir}','&&',\n",
+        "    'pip install -e . --user'\n",
+        "])\n",
+        "\n",
+        "!$mvcc_install_cmd\n",
+        "\n",
+        "# \u6a21\u578b\n",
+        "models = [\n",
+        "    ('dpt_hybrid-midas-501f0c75.pt', 'midas'),  # midas\u6a21\u578b\n",
+        "    ('res101.pth', 'leres'),  # res101.pth\u6a21\u578b\n",
+        "    ('network-bsds500.pth', 'hed'),  # hed\u6a21\u578b\n",
+        "    ('mlsd_large_512_fp32.pth', 'mlsd'),  # mlsd\u6a21\u578b\n",
+        "    ('body_pose_model.pth', 'openpose'),  # body_pose_model\u6a21\u578b\n",
+        "    ('hand_pose_model.pth', 'openpose'),  # hand_pose_model\u6a21\u578b\n",
+        "    ('upernet_global_small.pth', 'uniformer')  # Segmentation\u7684preprocessor\u6a21\u578b\n",
+        "]\n",
+        "\n",
+        "# \u904d\u5386\u6a21\u578b\u5217\u8868\u5e76\u521b\u5efa\u7b26\u53f7\u94fe\u63a5\n",
+        "for model, directory in models:\n",
+        "    check_model_and_make_symbollink_general(model, './ckpts', copy_or_mount, ext_dir)\n",
+        "\n",
+        "# \u5728\u5b89\u88c5\u524d\u68c0\u67e5comfy_controlnet_preprocessors\u6587\u4ef6\u5939\u662f\u5426\u5b58\u5728\n",
+        "repo_name = 'comfy_controlnet_preprocessors'\n",
+        "check_folder_and_git_clone(repo_name, 'https://github.com/Fannovel16/comfy_controlnet_preprocessors')\n",
+        "\n",
+        "install_cmd = (' ').join(base_args[:] + [\n",
+        "    f'cd {custom_nodes_dir}','&&',\n",
+        "    f'cd {repo_name}','&&',\n",
+        "    'python install.py --user'\n",
+        "])\n",
+        "\n",
+        "print(install_cmd)\n",
+        "\n",
+        "!$install_cmd"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "83ad1c5c-436a-4f55-b030-ecdf2e53e54d",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# !pip uninstall opencv-python -y\n",
+        "# !pip install opencv-python --user\n",
+        "\n",
+        "# custom_nodes_dir = '/openbayes/home/ComfyUI/custom_nodes/'\n",
+        "# ccp_dir = os.path.join(ext_dir,'./comfy_controlnet_preprocessors')\n",
+        "\n",
+        "# dep_install_cmd = (' ').join(base_args[:] + [\n",
+        "#     f'conda install -r {custom_nodes_dir}/requirements.txt --extra-index-url https://download.pytorch.org/whl/cu117 --no-warn-script-location'\n",
+        "# ])\n",
+        "                   \n",
+        "# !$dep_install_cmd\n",
+        "\n",
+        "# mvcc_install_cmd = (' ').join(base_args[:] + [\n",
+        "#     f'cd {root_dir}','&&',\n",
+        "#     'git clone https://github.com/open-mmlab/mmcv.git','&&',\n",
+        "#     'cd mmcv','&&',\n",
+        "#     'pip install -e . --user'\n",
+        "# ])\n",
+        "\n",
+        "# !$mvcc_install_cmd\n",
+        "\n",
+        "# # \u6a21\u578b\n",
+        "# models = [\n",
+        "#     ('dpt_hybrid-midas-501f0c75.pt', 'midas'),  # midas\u6a21\u578b\n",
+        "#     ('res101.pth', 'leres'),  # res101.pth\u6a21\u578b\n",
+        "#     ('network-bsds500.pth', 'hed'),  # hed\u6a21\u578b\n",
+        "#     ('mlsd_large_512_fp32.pth', 'mlsd'),  # mlsd\u6a21\u578b\n",
+        "#     ('body_pose_model.pth', 'openpose'),  # body_pose_model\u6a21\u578b\n",
+        "#     ('hand_pose_model.pth', 'openpose'),  # hand_pose_model\u6a21\u578b\n",
+        "#     ('upernet_global_small.pth', 'uniformer')  # Segmentation\u7684preprocessor\u6a21\u578b\n",
+        "# ]\n",
+        "\n",
+        "# # \u904d\u5386\u6a21\u578b\u5217\u8868\u5e76\u521b\u5efa\u7b26\u53f7\u94fe\u63a5\n",
+        "# for model, directory in models:\n",
+        "#     check_model_and_make_symbollink_general(model, './ckpts', copy_or_mount, ext_dir)\n",
+        "\n",
+        "\n",
+        "# install_cmd = (' ').join(base_args[:] + [\n",
+        "#     'cd /openbayes/home/ComfyUI/custom_nodes','&&',\n",
+        "#     'git clone https://github.com/Fannovel16/comfy_controlnet_preprocessors','&&',\n",
+        "#     'cd comfy_controlnet_preprocessors','&&',\n",
+        "#     'conda install opencv -y','&&',\n",
+        "#     'python -V','&&',\n",
+        "#     'python install.py --user'\n",
+        "# ])\n",
+        "\n",
+        "# print(install_cmd)\n",
+        "\n",
+        "# !$install_cmd"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "680e4da1-af79-457e-ba6b-92120790e405",
       "metadata": {},
       "source": [
@@ -872,7 +1002,15 @@
       "id": "ab85bfc6-63f4-4693-9b2d-2fb5acce90ce",
       "metadata": {},
       "source": [
-        "# \u6302\u8f7dBLIP\u6a21\u578b"
+        "# \u6302\u8f7dCLIP\u6a21\u578b"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "4d91d500-e0f7-41bd-93d2-b025a648cbb9",
+      "metadata": {},
+      "source": [
+        "## ViT-L\u6a21\u578b"
       ]
     },
     {
@@ -897,7 +1035,13 @@
         "    'ViT-L-14_openai_mediums.safetensors',\n",
         "    'ViT-L-14_openai_movements.safetensors',\n",
         "    'ViT-L-14_openai_negative.safetensors',\n",
-        "    'ViT-L-14_openai_trendings.safetensors'\n",
+        "    'ViT-L-14_openai_trendings.safetensors',\n",
+        "    # BLIP\n",
+        "    'model_base_caption_capfilt_large.pth',\n",
+        "    'ViT-L-14.pt',\n",
+        "    'ViT-B-16.pt',\n",
+        "    # Deepbooru\u6a21\u578b\n",
+        "    'model-resnet_custom_v3.pt'\n",
         "]\n",
         "\n",
         "# \u904d\u5386\u6a21\u578b\u5217\u8868\u5e76\u521b\u5efa\u7b26\u53f7\u94fe\u63a5\n",
@@ -1036,6 +1180,138 @@
         "\n",
         "for model in models_to_check:\n",
         "    check_model_and_make_symbollink_general(model, './models/upscale_models', copy_or_mount, comfyUIDir)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "925fe9d7-9835-4dae-9ded-62cb167cd9ee",
+      "metadata": {},
+      "source": [
+        "## \u90e8\u7f72ControlNet\u6a21\u578b\n",
+        "\u89e3\u538bControlNet\u6a21\u578b\u5e76\u5728controlnet\u62d3\u5c55\u7684\u6a21\u578b\u76ee\u5f55\u4e0b\u521b\u5efa\u5bf9\u5e94\u6a21\u578b\u7684\u7b26\u53f7\u94fe\u63a5"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "59b1d7a1-2560-40b8-abd8-ae88af6f61a8",
+      "metadata": {},
+      "source": [
+        "### ControlNet\u7684preprocessors\u6a21\u578b"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "0621e752-ca5b-4377-bf3c-5754d28f5e70",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# # \u6a21\u578b\n",
+        "# models = [\n",
+        "#     ('dpt_hybrid-midas-501f0c75.pt', 'midas'),  # midas\u6a21\u578b\n",
+        "#     ('res101.pth', 'leres'),  # res101.pth\u6a21\u578b\n",
+        "#     ('network-bsds500.pth', 'hed'),  # hed\u6a21\u578b\n",
+        "#     ('mlsd_large_512_fp32.pth', 'mlsd'),  # mlsd\u6a21\u578b\n",
+        "#     ('body_pose_model.pth', 'openpose'),  # body_pose_model\u6a21\u578b\n",
+        "#     ('hand_pose_model.pth', 'openpose'),  # hand_pose_model\u6a21\u578b\n",
+        "#     ('upernet_global_small.pth', 'uniformer')  # Segmentation\u7684preprocessor\u6a21\u578b\n",
+        "# ]\n",
+        "\n",
+        "# # \u904d\u5386\u6a21\u578b\u5217\u8868\u5e76\u521b\u5efa\u7b26\u53f7\u94fe\u63a5\n",
+        "# for model, directory in models:\n",
+        "#     check_model_and_make_symbollink_general(model, f'./extensions/sd-webui-controlnet/annotator/{directory}', copy_or_mount)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "dcf9e9fe-3c9e-463b-bd1c-1fab1b704f0a",
+      "metadata": {},
+      "source": [
+        "### ControlNet\u7684\u6a21\u578b"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "4a13a509-24fb-4b4a-a89f-5636717b856b",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# \u6a21\u578b\u540d\u79f0\n",
+        "controlnet_models = [\n",
+        "    'control_canny-fp16.safetensors',\n",
+        "    'control_depth-fp16.safetensors',\n",
+        "    'control_hed-fp16.safetensors',\n",
+        "    'control_mlsd-fp16.safetensors',\n",
+        "    'control_normal-fp16.safetensors',\n",
+        "    'control_openpose-fp16.safetensors',\n",
+        "    'control_scribble-fp16.safetensors',\n",
+        "    'control_seg-fp16.safetensors'\n",
+        "]\n",
+        "\n",
+        "# \u904d\u5386\u6a21\u578b\u540d\u79f0\u5217\u8868\u5e76\u521b\u5efa\u7b26\u53f7\u94fe\u63a5\n",
+        "for model_name in controlnet_models:\n",
+        "    check_model_and_make_symbollink_general(model_name, './models/controlnet', copy_or_mount,comfyUIDir)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "c187ad46-aa7a-4ea0-8604-22db10973c1a",
+      "metadata": {},
+      "source": [
+        "### T2I\u6a21\u578b"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "6dde32af-1610-4865-83be-d3caa69193d0",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# \u6a21\u578b\u540d\u79f0\n",
+        "t2i_models = [ \n",
+        "    ('t2iadapter_canny_sd14v1.pth', 'sketch_adapter_v14.yaml'), \n",
+        "    ('t2iadapter_sketch_sd14v1.pth', 'sketch_adapter_v14.yaml'),\n",
+        "    ('t2iadapter_seg_sd14v1.pth', 'image_adapter_v14.yaml'),\n",
+        "    ('t2iadapter_keypose_sd14v1.pth', 'image_adapter_v14.yaml'),  \n",
+        "    ('t2iadapter_openpose_sd14v1.pth', 'image_adapter_v14.yaml'), \n",
+        "    ('t2iadapter_color_sd14v1.pth', 't2iadapter_color_sd14v1.yaml'), \n",
+        "    ('t2iadapter_style_sd14v1.pth', 't2iadapter_style_sd14v1.yaml')\n",
+        "]\n",
+        "\n",
+        "def copy_and_rename_yaml(ref_yaml, model_name, target_dir):\n",
+        "    \"\"\"\n",
+        "    \u590d\u5236\u5e76\u91cd\u547d\u540d\u7ed9\u5b9a\u7684\u914d\u7f6e\u6587\u4ef6\u3002\n",
+        "    \u5c06\u6e90\u6587\u4ef6\u590d\u5236\u5230\u76ee\u6807\u76ee\u5f55\uff0c\u91cd\u547d\u540d\u4e3a\u4e0e\u6a21\u578b\u540d\u79f0\u76f8\u540c\u7684\u540d\u79f0\uff08\u4e0d\u5305\u62ec\u6269\u5c55\u540d\uff09\u3002\n",
+        "    Args:\n",
+        "        ref_yaml (str): \u9700\u8981\u590d\u5236\u7684\u914d\u7f6e\u6587\u4ef6\u7684\u6587\u4ef6\u540d\u3002\n",
+        "        model_name (str): \u76ee\u6807\u6a21\u578b\u7684\u540d\u79f0\u3002\n",
+        "        target_dir (str): \u76ee\u6807\u76ee\u5f55\u7684\u8def\u5f84\u3002\n",
+        "    \"\"\"\n",
+        "    # \u4ece ref_yaml \u4e2d\u63d0\u53d6\u6587\u4ef6\u540d\u548c\u6269\u5c55\u540d\n",
+        "    ref_name, ref_ext = os.path.splitext(ref_yaml)\n",
+        "\n",
+        "    # \u6784\u5efa\u76ee\u6807\u6587\u4ef6\u540d\n",
+        "    target_name = os.path.splitext(model_name)[0] + ref_ext\n",
+        "    target_path = os.path.join(target_dir, target_name)\n",
+        "    \n",
+        "    # \u68c0\u67e5\u76ee\u6807\u8def\u5f84\u662f\u5426\u5b58\u5728\u76f8\u5e94\u7684\u6587\u4ef6\n",
+        "    if os.path.exists(target_path):\n",
+        "        print(f\"{target_path} \u5df2\u7ecf\u5b58\u5728,\u8df3\u8fc7\u590d\u5236\")\n",
+        "        return\n",
+        "    \n",
+        "    yaml_path = os.path.join(target_dir, ref_yaml)\n",
+        "\n",
+        "    # \u590d\u5236\u6e90\u6587\u4ef6\u5e76\u5c06\u5176\u91cd\u547d\u540d\u4e3a\u76ee\u6807\u6587\u4ef6\u540d\n",
+        "    shutil.copyfile(yaml_path, target_path)\n",
+        "\n",
+        "# \u904d\u5386\u6a21\u578b\u540d\u79f0\u5217\u8868\u5e76\u521b\u5efa\u7b26\u53f7\u94fe\u63a5\n",
+        "target_dir = os.path.join(comfyUIDir, './models/controlnet')\n",
+        "\n",
+        "for model_name, ref_yaml in t2i_models:\n",
+        "    check_model_and_make_symbollink_general(model_name, target_dir, copy_or_mount, comfyUIDir)\n",
+        "    # copy_and_rename_yaml(ref_yaml, model_name, target_dir)"
       ]
     },
     {
