--- a/ipynb/ComfyUI/OneClick-ComfyUI-for-Openbayes.ipynb
+++ b/ipynb/ComfyUI/OneClick-ComfyUI-for-Openbayes.ipynb
@@ -798,6 +798,26 @@
     },
     {
       "cell_type": "markdown",
+      "id": "905de240-4fb6-4e9a-8084-92ec63473a6a",
+      "metadata": {},
+      "source": [
+        "## \u4ea4\u4ee3\u6302\u8f7d\u65b9\u5f0f\uff1a\u590d\u5236or\u521b\u5efa\u8f6f\u8fde\u63a5"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "c84c48d7-abe4-44a7-af57-4019518025dd",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "%cd $repo_root_dir\n",
+        "%run ./nbfunc/hub.ipynb\n",
+        "copy_or_mount = True # True\u610f\u5473\u7740\u53ea\u521b\u5efa\u7b26\u53f7\u8fde\u63a5"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "b33c214b-3a50-4980-8e63-e06e796cbac4",
       "metadata": {},
       "source": [
@@ -815,24 +835,26 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "id": "1e437853-66a5-44aa-ab69-d201e36b8bc4",
+      "id": "83ad1c5c-436a-4f55-b030-ecdf2e53e54d",
       "metadata": {},
       "outputs": [],
       "source": [
-        "custom_nodes_dir = os.path.join(root_dir,'ComfyUI/custom_nodes/')\n",
+        "!pip uninstall opencv-python -y\n",
+        "!pip install opencv-python --user\n",
         "\n",
-        "# \u5728\u5b89\u88c5\u524d\u68c0\u67e5\u6587\u4ef6\u5939\u662f\u5426\u5b58\u5728\u7684\u51fd\u6570\n",
-        "def check_folder_and_git_clone(folder_name, git_repo):\n",
-        "    if not os.path.exists(folder_name):\n",
-        "        os.system(f'git clone {git_repo}')\n",
+        "custom_nodes_dir = '/openbayes/home/ComfyUI/custom_nodes/'\n",
+        "ccp_dir = os.path.join(ext_dir,'./comfy_controlnet_preprocessors')\n",
         "\n",
-        "# \u5728\u5b89\u88c5\u524d\u68c0\u67e5mmcv\u6587\u4ef6\u5939\u662f\u5426\u5b58\u5728\n",
-        "mmcv_dir = os.path.join(root_dir,'mmcv')\n",
-        "\n",
-        "check_folder_and_git_clone(mmcv_dir, 'https://github.com/open-mmlab/mmcv.git')\n",
+        "dep_install_cmd = (' ').join(base_args[:] + [\n",
+        "    f'conda install -r {custom_nodes_dir}/requirements.txt --extra-index-url https://download.pytorch.org/whl/cu117 --no-warn-script-location'\n",
+        "])\n",
+        "                   \n",
+        "!$dep_install_cmd\n",
         "\n",
         "mvcc_install_cmd = (' ').join(base_args[:] + [\n",
-        "    f'cd {mmcv_dir}','&&',\n",
+        "    f'cd {root_dir}','&&',\n",
+        "    # 'git clone https://github.com/open-mmlab/mmcv.git','&&',\n",
+        "    'cd mmcv','&&',\n",
         "    'pip install -e . --user'\n",
         "])\n",
         "\n",
@@ -853,14 +875,14 @@
         "for model, directory in models:\n",
         "    check_model_and_make_symbollink_general(model, './ckpts', copy_or_mount, ext_dir)\n",
         "\n",
-        "# \u5728\u5b89\u88c5\u524d\u68c0\u67e5comfy_controlnet_preprocessors\u6587\u4ef6\u5939\u662f\u5426\u5b58\u5728\n",
-        "repo_name = 'comfy_controlnet_preprocessors'\n",
-        "check_folder_and_git_clone(repo_name, 'https://github.com/Fannovel16/comfy_controlnet_preprocessors')\n",
         "\n",
         "install_cmd = (' ').join(base_args[:] + [\n",
-        "    f'cd {custom_nodes_dir}','&&',\n",
-        "    f'cd {repo_name}','&&',\n",
-        "    'python install.py --user'\n",
+        "    'cd /openbayes/home/ComfyUI/custom_nodes','&&',\n",
+        "    'git clone https://github.com/Fannovel16/comfy_controlnet_preprocessors','&&',\n",
+        "    'cd comfy_controlnet_preprocessors','&&',\n",
+        "    'conda install opencv -y','&&',\n",
+        "    'python -V','&&',\n",
+        "    'python install.py'\n",
         "])\n",
         "\n",
         "print(install_cmd)\n",
@@ -869,89 +891,11 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "83ad1c5c-436a-4f55-b030-ecdf2e53e54d",
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# !pip uninstall opencv-python -y\n",
-        "# !pip install opencv-python --user\n",
-        "\n",
-        "# custom_nodes_dir = '/openbayes/home/ComfyUI/custom_nodes/'\n",
-        "# ccp_dir = os.path.join(ext_dir,'./comfy_controlnet_preprocessors')\n",
-        "\n",
-        "# dep_install_cmd = (' ').join(base_args[:] + [\n",
-        "#     f'conda install -r {custom_nodes_dir}/requirements.txt --extra-index-url https://download.pytorch.org/whl/cu117 --no-warn-script-location'\n",
-        "# ])\n",
-        "                   \n",
-        "# !$dep_install_cmd\n",
-        "\n",
-        "# mvcc_install_cmd = (' ').join(base_args[:] + [\n",
-        "#     f'cd {root_dir}','&&',\n",
-        "#     'git clone https://github.com/open-mmlab/mmcv.git','&&',\n",
-        "#     'cd mmcv','&&',\n",
-        "#     'pip install -e . --user'\n",
-        "# ])\n",
-        "\n",
-        "# !$mvcc_install_cmd\n",
-        "\n",
-        "# # \u6a21\u578b\n",
-        "# models = [\n",
-        "#     ('dpt_hybrid-midas-501f0c75.pt', 'midas'),  # midas\u6a21\u578b\n",
-        "#     ('res101.pth', 'leres'),  # res101.pth\u6a21\u578b\n",
-        "#     ('network-bsds500.pth', 'hed'),  # hed\u6a21\u578b\n",
-        "#     ('mlsd_large_512_fp32.pth', 'mlsd'),  # mlsd\u6a21\u578b\n",
-        "#     ('body_pose_model.pth', 'openpose'),  # body_pose_model\u6a21\u578b\n",
-        "#     ('hand_pose_model.pth', 'openpose'),  # hand_pose_model\u6a21\u578b\n",
-        "#     ('upernet_global_small.pth', 'uniformer')  # Segmentation\u7684preprocessor\u6a21\u578b\n",
-        "# ]\n",
-        "\n",
-        "# # \u904d\u5386\u6a21\u578b\u5217\u8868\u5e76\u521b\u5efa\u7b26\u53f7\u94fe\u63a5\n",
-        "# for model, directory in models:\n",
-        "#     check_model_and_make_symbollink_general(model, './ckpts', copy_or_mount, ext_dir)\n",
-        "\n",
-        "\n",
-        "# install_cmd = (' ').join(base_args[:] + [\n",
-        "#     'cd /openbayes/home/ComfyUI/custom_nodes','&&',\n",
-        "#     'git clone https://github.com/Fannovel16/comfy_controlnet_preprocessors','&&',\n",
-        "#     'cd comfy_controlnet_preprocessors','&&',\n",
-        "#     'conda install opencv -y','&&',\n",
-        "#     'python -V','&&',\n",
-        "#     'python install.py --user'\n",
-        "# ])\n",
-        "\n",
-        "# print(install_cmd)\n",
-        "\n",
-        "# !$install_cmd"
-      ]
-    },
-    {
       "cell_type": "markdown",
       "id": "680e4da1-af79-457e-ba6b-92120790e405",
       "metadata": {},
       "source": [
         "# \u6302\u8f7d\u5404\u7c7b\u5230ComfyUI\u6a21\u578b\u6587\u4ef6\u5939"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "id": "905de240-4fb6-4e9a-8084-92ec63473a6a",
-      "metadata": {},
-      "source": [
-        "## \u4ea4\u4ee3\u6302\u8f7d\u65b9\u5f0f\uff1a\u590d\u5236or\u521b\u5efa\u8f6f\u8fde\u63a5"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "c84c48d7-abe4-44a7-af57-4019518025dd",
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "%cd $repo_root_dir\n",
-        "%run ./nbfunc/hub.ipynb\n",
-        "copy_or_mount = True # True\u610f\u5473\u7740\u53ea\u521b\u5efa\u7b26\u53f7\u8fde\u63a5"
       ]
     },
     {
@@ -1392,7 +1336,7 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "id": "6902ff43-6cf7-411a-80aa-d4ed779fbac6",
+      "id": "d8acfb1f-97e1-42e6-9775-74e93f36f39c",
       "metadata": {},
       "outputs": [],
       "source": []
