--- a/tools/batch_scp_tools/sync_local_models_to_remote.ipynb
+++ b/tools/batch_scp_tools/sync_local_models_to_remote.ipynb
@@ -1,232 +1,191 @@
 {
- "cells": [
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
+  "cells": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/openbayes/home/./ComfyUI/\n",
-      "ssh root@ssh.openbayes.com -p32599 ls /openbayes/home/./ComfyUI/\n",
-      "ComfyUI repo found\n"
-     ]
-    }
-   ],
-   "source": [
-    "# !ssh root@ssh.openbayes.com -p32599 /etc/welcome\n",
-    "# !ssh root@ssh.openbayes.com -p32599 /etc/autodl-motd\n",
-    "import os\n",
-    "\n",
-    "ssh_cmd = 'ssh root@ssh.openbayes.com -p32599'\n",
-    "\n",
-    "root_dir = '/openbayes/home/'\n",
-    "\n",
-    "comfyUI_dir = os.path.join(root_dir, './ComfyUI/')\n",
-    "sdwebUI_dir = os.path.join(root_dir, './stable-diffusion-webui/')\n",
-    "\n",
-    "print(comfyUI_dir)\n",
-    "\n",
-    "def check_remote_folder_exists(ssh_cmd, remote_dir):\n",
-    "    cmd = ssh_cmd + ' ls ' + remote_dir\n",
-    "    print(cmd)\n",
-    "    result = os.system(cmd)\n",
-    "    if result == 0:\n",
-    "        # print('Folder exists')\n",
-    "        return True\n",
-    "    else:\n",
-    "        # print('Folder not exists')\n",
-    "        return False\n",
-    "\n",
-    "if check_remote_folder_exists(ssh_cmd, comfyUI_dir):\n",
-    "    repo_dir = comfyUI_dir\n",
-    "    remote_VAE_dir = os.path.join(repo_dir, './models/vae/')\n",
-    "    remote_lora_dir = os.path.join(repo_dir, './models/loras/')\n",
-    "    remote_sd_dir = os.path.join(repo_dir, './models/checkpoints/')\n",
-    "    remote_embeddings_dir = os.path.join(repo_dir, './models/embeddings/')\n",
-    "    print('ComfyUI repo found')\n",
-    "elif check_remote_folder_exists(ssh_cmd, sdwebUI_dir):\n",
-    "    repo_dir = sdwebUI_dir\n",
-    "    remote_VAE_dir = os.path.join(repo_dir, './models/VAE/')\n",
-    "    remote_lora_dir = os.path.join(repo_dir, './models/Lora/')\n",
-    "    remote_sd_dir = os.path.join(repo_dir, './models/Stable-diffusion/')\n",
-    "    remote_embeddings_dir = os.path.join(repo_dir, './embeddings/')\n",
-    "    print('Stable-diffusion repo found')\n",
-    "else:\n",
-    "    print('No repo found')\n",
-    "\n",
-    "local_dir = \"F:/AI_research/Stable_Diffusion/stable-diffusion-webui-master/models/\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# !ssh root@ssh.openbayes.com -p32599 /etc/welcome\n",
+        "# !ssh root@ssh.openbayes.com -p32599 /etc/autodl-motd\n",
+        "import os\n",
+        "\n",
+        "ssh_cmd = 'ssh root@ssh.openbayes.com -p32599'\n",
+        "\n",
+        "root_dir = '/openbayes/home/'\n",
+        "\n",
+        "comfyUI_dir = os.path.join(root_dir, './ComfyUI/')\n",
+        "sdwebUI_dir = os.path.join(root_dir, './stable-diffusion-webui/')\n",
+        "\n",
+        "print(comfyUI_dir)\n",
+        "\n",
+        "def check_remote_folder_exists(ssh_cmd, remote_dir):\n",
+        "    cmd = ssh_cmd + ' ls ' + remote_dir\n",
+        "    print(cmd)\n",
+        "    result = os.system(cmd)\n",
+        "    if result == 0:\n",
+        "        # print('Folder exists')\n",
+        "        return True\n",
+        "    else:\n",
+        "        # print('Folder not exists')\n",
+        "        return False\n",
+        "\n",
+        "if check_remote_folder_exists(ssh_cmd, comfyUI_dir):\n",
+        "    repo_dir = comfyUI_dir\n",
+        "    remote_VAE_dir = os.path.join(repo_dir, './models/vae/')\n",
+        "    remote_lora_dir = os.path.join(repo_dir, './models/loras/')\n",
+        "    remote_sd_dir = os.path.join(repo_dir, './models/checkpoints/')\n",
+        "    remote_embeddings_dir = os.path.join(repo_dir, './models/embeddings/')\n",
+        "    print('ComfyUI repo found')\n",
+        "elif check_remote_folder_exists(ssh_cmd, sdwebUI_dir):\n",
+        "    repo_dir = sdwebUI_dir\n",
+        "    remote_VAE_dir = os.path.join(repo_dir, './models/VAE/')\n",
+        "    remote_lora_dir = os.path.join(repo_dir, './models/Lora/')\n",
+        "    remote_sd_dir = os.path.join(repo_dir, './models/Stable-diffusion/')\n",
+        "    remote_embeddings_dir = os.path.join(repo_dir, './embeddings/')\n",
+        "    print('Stable-diffusion repo found')\n",
+        "else:\n",
+        "    print('No repo found')\n",
+        "\n",
+        "local_dir = \"F:/AI_research/Stable_Diffusion/stable-diffusion-webui-master/models/\""
+      ]
+    },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'F:\\\\AI_research\\\\Stable_Diffusion\\\\stable-diffusion-webui-master\\\\models\\\\Lora\\\\animeLineartStyle_v20Offset.safetensors': '/openbayes/home/./ComfyUI/./models/loras/', 'F:\\\\AI_research\\\\Stable_Diffusion\\\\stable-diffusion-webui-master\\\\models\\\\Lora\\\\epiNoiseoffset_v2.safetensors': '/openbayes/home/./ComfyUI/./models/loras/', 'F:\\\\AI_research\\\\Stable_Diffusion\\\\stable-diffusion-webui-master\\\\models\\\\Lora\\\\epiNoiseoffset_v2Pynoise.safetensors': '/openbayes/home/./ComfyUI/./models/loras/', 'F:\\\\AI_research\\\\Stable_Diffusion\\\\stable-diffusion-webui-master\\\\models\\\\Lora\\\\thickerLinesAnimeStyle_loraVersion.safetensors': '/openbayes/home/./ComfyUI/./models/loras/', 'F:\\\\AI_research\\\\Stable_Diffusion\\\\stable-diffusion-webui-master\\\\models\\\\Lora\\\\tokiameStyleThick.safetensors': '/openbayes/home/./ComfyUI/./models/loras/', 'F:\\\\AI_research\\\\Stable_Diffusion\\\\stable-diffusion-webui-master\\\\models\\\\Stable-diffusion\\\\anything-v4.5-pruned-fp16.ckpt': '/openbayes/home/./ComfyUI/./models/checkpoints/', 'F:\\\\AI_research\\\\Stable_Diffusion\\\\stable-diffusion-webui-master\\\\models\\\\Stable-diffusion\\\\anything-v4.5-pruned.safetensors': '/openbayes/home/./ComfyUI/./models/checkpoints/', 'F:\\\\AI_research\\\\Stable_Diffusion\\\\stable-diffusion-webui-master\\\\models\\\\Stable-diffusion\\\\Civitai\\\\camelliamixLine_v10.safetensors': '/openbayes/home/./ComfyUI/./models/checkpoints/', 'F:\\\\AI_research\\\\Stable_Diffusion\\\\stable-diffusion-webui-master\\\\models\\\\Stable-diffusion\\\\Civitai\\\\chilloutmix_NiPrunedFp16.safetensors': '/openbayes/home/./ComfyUI/./models/checkpoints/', 'F:\\\\AI_research\\\\Stable_Diffusion\\\\stable-diffusion-webui-master\\\\models\\\\Stable-diffusion\\\\Civitai\\\\chilloutmix_NiPrunedFp16Fix.safetensors': '/openbayes/home/./ComfyUI/./models/checkpoints/', 'F:\\\\AI_research\\\\Stable_Diffusion\\\\stable-diffusion-webui-master\\\\models\\\\Stable-diffusion\\\\Civitai\\\\expmixLine_v20.safetensors': '/openbayes/home/./ComfyUI/./models/checkpoints/', 'F:\\\\AI_research\\\\Stable_Diffusion\\\\stable-diffusion-webui-master\\\\models\\\\Stable-diffusion\\\\Civitai\\\\midjourneyPapercut_v1.ckpt': '/openbayes/home/./ComfyUI/./models/checkpoints/', 'F:\\\\AI_research\\\\Stable_Diffusion\\\\stable-diffusion-webui-master\\\\models\\\\Stable-diffusion\\\\Civitai\\\\PVC-AO.safetensors': '/openbayes/home/./ComfyUI/./models/checkpoints/', 'F:\\\\AI_research\\\\Stable_Diffusion\\\\stable-diffusion-webui-master\\\\models\\\\VAE\\\\anything-v4.0.vae.pt': '/openbayes/home/./ComfyUI/./models/vae/', 'F:\\\\AI_research\\\\Stable_Diffusion\\\\stable-diffusion-webui-master\\\\models\\\\VAE\\\\kl-f8-anime2.ckpt': '/openbayes/home/./ComfyUI/./models/vae/', 'F:\\\\AI_research\\\\Stable_Diffusion\\\\stable-diffusion-webui-master\\\\models\\\\VAE\\\\orangemix.vae.pt': '/openbayes/home/./ComfyUI/./models/vae/', 'F:\\\\AI_research\\\\Stable_Diffusion\\\\stable-diffusion-webui-master\\\\models\\\\VAE\\\\vae-ft-mse-840000-ema-pruned.ckpt': '/openbayes/home/./ComfyUI/./models/vae/'}\n"
-     ]
-    }
-   ],
-   "source": [
-    "import os\n",
-    "\n",
-    "def generate_file_dict(local_dir, mappings):\n",
-    "    file_dict = {}\n",
-    "    for root, dirs, files in os.walk(local_dir):\n",
-    "        for filename in files:\n",
-    "            local_path = os.path.normpath(os.path.join(root, filename))\n",
-    "            for key, value in mappings.items():\n",
-    "                if filename == key:\n",
-    "                    remote_path = value\n",
-    "                    file_dict[local_path] = remote_path\n",
-    "    return file_dict\n",
-    "\n",
-    "# 创建三个字典\n",
-    "vae_keys = [\n",
-    "    \"orangemix.vae.pt\",\n",
-    "    \"kl-f8-anime2.ckpt\",\n",
-    "    \"anything-v4.0.vae.pt\",\n",
-    "    \"vae-ft-mse-840000-ema-pruned.ckpt\"\n",
-    "]\n",
-    "vae_dict = {key: remote_VAE_dir for key in vae_keys}\n",
-    "\n",
-    "lora_keys = [\n",
-    "    \"epiNoiseoffset_v2.safetensors\",\n",
-    "    \"epiNoiseoffset_v2Pynoise.safetensors\",\n",
-    "    \"animeLineartStyle_v20Offset.safetensors\",\n",
-    "    \"tokiameStyleThick.safetensors\",\n",
-    "    \"thickerLinesAnimeStyle_loraVersion.safetensors\"\n",
-    "]\n",
-    "lora_dict = {key: remote_lora_dir for key in lora_keys}\n",
-    "\n",
-    "sd_keys = [\n",
-    "    \"expmixLine_v20.safetensors\",\n",
-    "    \"camelliamixLine_v10.safetensors\",\n",
-    "    \"chilloutmix_NiPrunedFp16.safetensors\",\n",
-    "    \"PVC-AO.safetensors\",\n",
-    "    \"midjourneyPapercut_v1.ckpt\",\n",
-    "    \"chilloutmix_NiPrunedFp16Fix.safetensors\",\n",
-    "    \"anything-v4.5-pruned.safetensors\",\n",
-    "    \"anything-v4.5-pruned-fp16.ckpt\"\n",
-    "]\n",
-    "sd_dict = {key: remote_sd_dir for key in sd_keys}\n",
-    "\n",
-    "# 将三个字典合并\n",
-    "sum_mappings = {**vae_dict, **lora_dict, **sd_dict}\n",
-    "\n",
-    "file_dict = generate_file_dict(local_dir, sum_mappings)\n",
-    "\n",
-    "print(file_dict)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import os\n",
+        "\n",
+        "def generate_file_dict(local_dir, mappings):\n",
+        "    file_dict = {}\n",
+        "    for root, dirs, files in os.walk(local_dir):\n",
+        "        for filename in files:\n",
+        "            local_path = os.path.normpath(os.path.join(root, filename))\n",
+        "            for key, value in mappings.items():\n",
+        "                if filename == key:\n",
+        "                    remote_path = value\n",
+        "                    file_dict[local_path] = remote_path\n",
+        "    return file_dict\n",
+        "\n",
+        "# \u521b\u5efa\u4e09\u4e2a\u5b57\u5178\n",
+        "vae_keys = [\n",
+        "    \"orangemix.vae.pt\",\n",
+        "    \"kl-f8-anime2.ckpt\",\n",
+        "    \"anything-v4.0.vae.pt\",\n",
+        "    \"vae-ft-mse-840000-ema-pruned.ckpt\"\n",
+        "]\n",
+        "vae_dict = {key: remote_VAE_dir for key in vae_keys}\n",
+        "\n",
+        "lora_keys = [\n",
+        "    \"epiNoiseoffset_v2.safetensors\",\n",
+        "    \"epiNoiseoffset_v2Pynoise.safetensors\",\n",
+        "    \"animeLineartStyle_v20Offset.safetensors\",\n",
+        "    \"tokiameStyleThick.safetensors\",\n",
+        "    \"thickerLinesAnimeStyle_loraVersion.safetensors\"\n",
+        "]\n",
+        "lora_dict = {key: remote_lora_dir for key in lora_keys}\n",
+        "\n",
+        "sd_keys = [\n",
+        "    \"expmixLine_v20.safetensors\",\n",
+        "    \"camelliamixLine_v10.safetensors\",\n",
+        "    \"chilloutmix_NiPrunedFp16.safetensors\",\n",
+        "    \"PVC-AO.safetensors\",\n",
+        "    \"midjourneyPapercut_v1.ckpt\",\n",
+        "    \"chilloutmix_NiPrunedFp16Fix.safetensors\",\n",
+        "    \"anything-v4.5-pruned.safetensors\",\n",
+        "    \"anything-v4.5-pruned-fp16.ckpt\"\n",
+        "]\n",
+        "sd_dict = {key: remote_sd_dir for key in sd_keys}\n",
+        "\n",
+        "# \u5c06\u4e09\u4e2a\u5b57\u5178\u5408\u5e76\n",
+        "sum_mappings = {**vae_dict, **lora_dict, **sd_dict}\n",
+        "\n",
+        "file_dict = generate_file_dict(local_dir, sum_mappings)\n",
+        "\n",
+        "print(file_dict)"
+      ]
+    },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['/openbayes/home/./ComfyUI/./models/loras/animeLineartStyle_v20Offset.safetensors']\n",
-      "✅animeLineartStyle_v20Offset.safetensors\n",
-      "['/openbayes/home/./ComfyUI/./models/loras/epiNoiseoffset_v2.safetensors']\n",
-      "✅epiNoiseoffset_v2.safetensors\n",
-      "['/openbayes/home/./ComfyUI/./models/loras/epiNoiseoffset_v2Pynoise.safetensors']\n",
-      "✅epiNoiseoffset_v2Pynoise.safetensors\n",
-      "['/openbayes/home/./ComfyUI/./models/loras/thickerLinesAnimeStyle_loraVersion.safetensors']\n",
-      "✅thickerLinesAnimeStyle_loraVersion.safetensors\n",
-      "['/openbayes/home/./ComfyUI/./models/loras/tokiameStyleThick.safetensors']\n",
-      "✅tokiameStyleThick.safetensors\n",
-      "[]\n",
-      "❓anything-v4.5-pruned-fp16.ckpt\n",
-      "scp -P 32599 F:\\AI_research\\Stable_Diffusion\\stable-diffusion-webui-master\\models\\Stable-diffusion\\anything-v4.5-pruned-fp16.ckpt root@ssh.openbayes.com:/openbayes/home/./ComfyUI/./models/checkpoints/\n",
-      "[]\n",
-      "❓anything-v4.5-pruned.safetensors\n",
-      "scp -P 32599 F:\\AI_research\\Stable_Diffusion\\stable-diffusion-webui-master\\models\\Stable-diffusion\\anything-v4.5-pruned.safetensors root@ssh.openbayes.com:/openbayes/home/./ComfyUI/./models/checkpoints/\n"
-     ]
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import os\n",
+        "\n",
+        "def batch_scp(file_dict, username, remote_host, port):\n",
+        "    for local_path, remote_path in file_dict.items():\n",
+        "        # \u68c0\u67e5\u8fdc\u7a0b\u8def\u5f84\u4e0b\u662f\u5426\u5b58\u5728\u540c\u540d\u6587\u4ef6\n",
+        "        local_filename = os.path.basename(local_path)\n",
+        "        check_cmd = f'ssh {username}@{remote_host} -p{port} find {remote_path} -name {local_filename}' \n",
+        "        result = !{check_cmd}\n",
+        "        print(result)\n",
+        "        cmd = f'scp -P {port} {local_path} {username}@{remote_host}:{remote_path}'\n",
+        "        if not result:\n",
+        "            # \u4f20\u8f93\u6587\u4ef6\u5230\u8fdc\u7a0b\u4e3b\u673a\n",
+        "            print(f'\u2753{local_filename}')\n",
+        "            print(cmd)\n",
+        "            !$cmd\n",
+        "            # print(f\"Transferred {local_filename} to {remote_path}\")\n",
+        "        else:\n",
+        "            # print(f\"File {local_filename} already exists on remote host, skipping transfer...\")\n",
+        "            print(f'\u2705{local_filename}')\n",
+        "            pass\n",
+        "\n",
+        "def extract_ssh_info(ssh_cmd):\n",
+        "    \"\"\"\n",
+        "    \u4eceSSH\u547d\u4ee4\u4e2d\u63d0\u53d6\u7528\u6237\u540d\u3001\u8fdc\u7a0b\u4e3b\u673a\u540d\u548c\u7aef\u53e3\u53f7\u3002\n",
+        "\n",
+        "    Args:\n",
+        "        ssh_cmd (str): SSH\u547d\u4ee4\u5b57\u7b26\u4e32\u3002\n",
+        "\n",
+        "    Returns:\n",
+        "        tuple: \u5305\u542b\u7528\u6237\u540d\u3001\u8fdc\u7a0b\u4e3b\u673a\u540d\u548c\u7aef\u53e3\u53f7\u7684\u5143\u7ec4\u3002\n",
+        "    \"\"\"\n",
+        "    # \u5206\u79bb\u7528\u6237\u540d\u548c\u4e3b\u673a\u540d\n",
+        "    username, _, hostname = ssh_cmd.split()[1].partition('@')\n",
+        "    # \u83b7\u53d6\u7aef\u53e3\u53f7\n",
+        "    port = ssh_cmd.split('-p')[-1].split()[0]\n",
+        "    return username, hostname, port\n",
+        "\n",
+        "\n",
+        "ssh_cmd = 'ssh root@ssh.openbayes.com -p32599'\n",
+        "username, remote_host, port = extract_ssh_info(ssh_cmd)\n",
+        "\n",
+        "batch_scp(file_dict, username, remote_host, port)\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
-   ],
-   "source": [
-    "import os\n",
-    "\n",
-    "def batch_scp(file_dict, username, remote_host, port):\n",
-    "    for local_path, remote_path in file_dict.items():\n",
-    "        # 检查远程路径下是否存在同名文件\n",
-    "        local_filename = os.path.basename(local_path)\n",
-    "        check_cmd = f'ssh {username}@{remote_host} -p{port} find {remote_path} -name {local_filename}' \n",
-    "        result = !{check_cmd}\n",
-    "        print(result)\n",
-    "        cmd = f'scp -P {port} {local_path} {username}@{remote_host}:{remote_path}'\n",
-    "        if not result:\n",
-    "            # 传输文件到远程主机\n",
-    "            print(f'❓{local_filename}')\n",
-    "            print(cmd)\n",
-    "            !$cmd\n",
-    "            # print(f\"Transferred {local_filename} to {remote_path}\")\n",
-    "        else:\n",
-    "            # print(f\"File {local_filename} already exists on remote host, skipping transfer...\")\n",
-    "            print(f'✅{local_filename}')\n",
-    "            pass\n",
-    "\n",
-    "def extract_ssh_info(ssh_cmd):\n",
-    "    \"\"\"\n",
-    "    从SSH命令中提取用户名、远程主机名和端口号。\n",
-    "\n",
-    "    Args:\n",
-    "        ssh_cmd (str): SSH命令字符串。\n",
-    "\n",
-    "    Returns:\n",
-    "        tuple: 包含用户名、远程主机名和端口号的元组。\n",
-    "    \"\"\"\n",
-    "    # 分离用户名和主机名\n",
-    "    username, _, hostname = ssh_cmd.split()[1].partition('@')\n",
-    "    # 获取端口号\n",
-    "    port = ssh_cmd.split('-p')[-1].split()[0]\n",
-    "    return username, hostname, port\n",
-    "\n",
-    "\n",
-    "ssh_cmd = 'ssh root@ssh.openbayes.com -p32599'\n",
-    "username, remote_host, port = extract_ssh_info(ssh_cmd)\n",
-    "\n",
-    "batch_scp(file_dict, username, remote_host, port)\n",
-    "\n"
-   ]
+  ],
+  "metadata": {
+    "kernelspec": {
+      "display_name": "base",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.9.12"
+    },
+    "orig_nbformat": 4
   },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "base",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.9.12"
-  },
-  "orig_nbformat": 4
- },
- "nbformat": 4,
- "nbformat_minor": 2
+  "nbformat": 4,
+  "nbformat_minor": 2
 }
