--- a/ipynb/ComfyUI/OneClick-ComfyUI-for-Openbayes.ipynb
+++ b/ipynb/ComfyUI/OneClick-ComfyUI-for-Openbayes.ipynb
@@ -924,6 +924,10 @@
         "    'anything-v4.0-pruned-fp16.safetensors',  # Anything\u7cfb\u5217\u6a21\u578b\n",
         "    'PVC-AO.safetensors',  # PVC\u624b\u529e\u6a21\u578b\n",
         "    'midjourneyPapercut_v1.ckpt'  # PVC\u624b\u529e\u6a21\u578b\n",
+        "    'CamelliaMix_2.5D-fp16-pruned.safetensors',\n",
+        "    'CamelliaMix_Line_V2.safetensors',\n",
+        "    'Camelliamix_V2-fp16-pruned.safetensors',\n",
+        "    'abyssorangemix3AOM3_aom3.safetensors',\n",
         "]\n",
         "\n",
         "# \u904d\u5386\u6a21\u578b\u5217\u8868\u5e76\u521b\u5efa\u7b26\u53f7\u94fe\u63a5\n",
