--- a/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
+++ b/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
@@ -34,20 +34,21 @@
         "        return True\n",
         "    else:\n",
         "        return False\n",
+        "\n",
         "if not check_pip_list():\n",
         "    # \u67e5\u627epip.conf\u6587\u4ef6\n",
         "    pip_conf_file = os.popen(\"find / -name 'pip.conf'\").read().strip()\n",
         "    # \u76f4\u63a5\u8986\u76d6pip.conf\u6587\u4ef6\n",
         "    with open(pip_conf_file, 'w') as f:\n",
         "        f.write(\"[global]\\nindex-url = https://pypi.tuna.tsinghua.edu.cn/simple\\ntrusted-host = pypi.tuna.tsinghua.edu.cn\")\n",
-        "        # f.write(\"\")\n",
+        "        f.write(\"\\nextra-index-url = https://pypi.org/simple\")\n",
         "    # \u9a8c\u8bc1\u4fee\u6539\u662f\u5426\u6210\u529f\n",
         "    if check_pip_list():\n",
         "        print(\"pip\u8f6f\u4ef6\u6e90\u5207\u6362\u6210\u529f\uff01\")\n",
         "    else:\n",
         "        print(\"pip\u8f6f\u4ef6\u6e90\u5207\u6362\u5931\u8d25\uff0c\u8bf7\u68c0\u67e5\u811a\u672c\u662f\u5426\u6b63\u786e\u8fd0\u884c\u3002\")\n",
         "else:\n",
-        "    print(\"pip\u8f6f\u4ef6\u6e90\u672c\u6765\u5c31\u662f\u6e05\u534e\u6e90\uff0c\u65e0\u9700\u5207\u6362\")"
+        "    print(\"pip\u8f6f\u4ef6\u6e90\u672c\u6765\u5c31\u662f\u6e05\u534e\u6e90\uff0c\u65e0\u9700\u5207\u6362\")\n"
       ]
     },
     {
@@ -800,6 +801,16 @@
         "\n",
         "\n",
         "# clear_output(wait=True)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "6f092923-80ac-4e48-afc8-1657ecbac6a9",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "!pip install gradio==3.23 -i https://pypi.org/simple"
       ]
     },
     {
@@ -2186,6 +2197,14 @@
         "\n",
         "!$cmd"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "c45b202e-a855-45d7-80d7-5786d023b189",
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
