--- a/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
+++ b/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
@@ -1248,11 +1248,15 @@
         "    'anything-v4.0-pruned-fp16.safetensors',  # Anything\u7cfb\u5217\u6a21\u578b\n",
         "    'PVC-AO.safetensors',  # PVC\u624b\u529e\u6a21\u578b\n",
         "    'midjourneyPapercut_v1.ckpt'  # PVC\u624b\u529e\u6a21\u578b\n",
+        "    'CamelliaMix_2.5D-fp16-pruned.safetensors',\n",
+        "    'CamelliaMix_Line_V2.safetensors',\n",
+        "    'Camelliamix_V2-fp16-pruned.safetensors',\n",
+        "    'abyssorangemix3AOM3_aom3.safetensors',\n",
         "]\n",
         "\n",
         "# \u904d\u5386\u6a21\u578b\u5217\u8868\u5e76\u521b\u5efa\u7b26\u53f7\u94fe\u63a5\n",
         "for model in sd_models:\n",
-        "    check_model_and_make_symbollink(model, './models/Stable-diffusion', copy_or_mount)\n",
+        "    check_model_and_make_symbollink_general(model, './models/checkpoints', copy_or_mount,comfyUIDir)\n",
         "\n",
         "# VAE\u6a21\u578b\n",
         "vae_models = [\n",
@@ -1262,7 +1266,7 @@
         "\n",
         "# \u904d\u5386\u6a21\u578b\u5217\u8868\u5e76\u521b\u5efa\u7b26\u53f7\u94fe\u63a5\n",
         "for model in vae_models:\n",
-        "    check_model_and_make_symbollink(model, './models/VAE', copy_or_mount)"
+        "    check_model_and_make_symbollink_general(model, './models/vae', copy_or_mount,comfyUIDir)"
       ]
     },
     {
