--- a/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
+++ b/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
@@ -1256,7 +1256,7 @@
         "\n",
         "# \u904d\u5386\u6a21\u578b\u5217\u8868\u5e76\u521b\u5efa\u7b26\u53f7\u94fe\u63a5\n",
         "for model in sd_models:\n",
-        "    check_model_and_make_symbollink_general(model, './models/checkpoints', copy_or_mount,comfyUIDir)\n",
+        "    check_model_and_make_symbollink(model, './models/Stable-diffusion', copy_or_mount)\n",
         "\n",
         "# VAE\u6a21\u578b\n",
         "vae_models = [\n",
@@ -1266,7 +1266,7 @@
         "\n",
         "# \u904d\u5386\u6a21\u578b\u5217\u8868\u5e76\u521b\u5efa\u7b26\u53f7\u94fe\u63a5\n",
         "for model in vae_models:\n",
-        "    check_model_and_make_symbollink_general(model, './models/vae', copy_or_mount,comfyUIDir)"
+        "    check_model_and_make_symbollink(model, './models/VAE', copy_or_mount)"
       ]
     },
     {
