--- a/ipynb/ComfyUI/OneClick-ComfyUI-for-Openbayes.ipynb
+++ b/ipynb/ComfyUI/OneClick-ComfyUI-for-Openbayes.ipynb
@@ -839,49 +839,59 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "!pip uninstall opencv-python -y\n",
-        "!pip install opencv-python --user\n",
+        "custom_nodes_dir = os.path.join(comfyUIDir,'./custom_nodes')\n",
+        "ccp_dir = os.path.join(custom_nodes_dir,'./comfy_controlnet_preprocessors')\n",
         "\n",
-        "custom_nodes_dir = '/openbayes/home/ComfyUI/custom_nodes/'\n",
-        "ccp_dir = os.path.join(ext_dir,'./comfy_controlnet_preprocessors')\n",
-        "\n",
-        "dep_install_cmd = (' ').join(base_args[:] + [\n",
-        "    f'conda install -r {custom_nodes_dir}/requirements.txt --extra-index-url https://download.pytorch.org/whl/cu117 --no-warn-script-location'\n",
-        "])\n",
+        "# dep_install_cmd = (' ').join(base_args[:] + [\n",
+        "#     f'conda install -r {custom_nodes_dir}/requirements.txt --extra-index-url https://download.pytorch.org/whl/cu117 --no-warn-script-location'\n",
+        "# ])\n",
         "                   \n",
-        "!$dep_install_cmd\n",
+        "# !$dep_install_cmd\n",
+        "\n",
+        "mmcv_dir = os.path.join(root_dir,'./mmcv')\n",
+        "\n",
+        "if not os.path.exists(mmcv_dir):\n",
+        "    clone_mvcc_cmd = (' ').join(base_args[:] + [\n",
+        "        f'cd {root_dir}','&&',\n",
+        "        'git clone https://github.com/open-mmlab/mmcv.git'\n",
+        "    ])\n",
+        "    !$clone_mvcc_cmd\n",
         "\n",
         "mvcc_install_cmd = (' ').join(base_args[:] + [\n",
-        "    f'cd {root_dir}','&&',\n",
-        "    # 'git clone https://github.com/open-mmlab/mmcv.git','&&',\n",
-        "    'cd mmcv','&&',\n",
+        "    f'cd {mmcv_dir}','&&',\n",
         "    'pip install -e . --user'\n",
         "])\n",
-        "\n",
         "!$mvcc_install_cmd\n",
         "\n",
-        "# \u6a21\u578b\n",
-        "models = [\n",
-        "    ('dpt_hybrid-midas-501f0c75.pt', 'midas'),  # midas\u6a21\u578b\n",
-        "    ('res101.pth', 'leres'),  # res101.pth\u6a21\u578b\n",
-        "    ('network-bsds500.pth', 'hed'),  # hed\u6a21\u578b\n",
-        "    ('mlsd_large_512_fp32.pth', 'mlsd'),  # mlsd\u6a21\u578b\n",
-        "    ('body_pose_model.pth', 'openpose'),  # body_pose_model\u6a21\u578b\n",
-        "    ('hand_pose_model.pth', 'openpose'),  # hand_pose_model\u6a21\u578b\n",
-        "    ('upernet_global_small.pth', 'uniformer')  # Segmentation\u7684preprocessor\u6a21\u578b\n",
-        "]\n",
+        "clone_ccp_cmd = (' ').join(base_args[:]+[\n",
+        "    f'cd {custom_nodes_dir}','&&',\n",
+        "    'git clone https://github.com/Fannovel16/comfy_controlnet_preprocessors'\n",
+        "])\n",
         "\n",
-        "# \u904d\u5386\u6a21\u578b\u5217\u8868\u5e76\u521b\u5efa\u7b26\u53f7\u94fe\u63a5\n",
-        "for model, directory in models:\n",
-        "    check_model_and_make_symbollink_general(model, './ckpts', copy_or_mount, ext_dir)\n",
+        "!$clone_ccp_cmd\n",
         "\n",
+        "if os.path.exists(ccp_dir):\n",
+        "    # \u6a21\u578b\n",
+        "    models = [\n",
+        "        ('dpt_hybrid-midas-501f0c75.pt', 'midas'),  # midas\u6a21\u578b\n",
+        "        ('res101.pth', 'leres'),  # res101.pth\u6a21\u578b\n",
+        "        ('network-bsds500.pth', 'hed'),  # hed\u6a21\u578b\n",
+        "        ('mlsd_large_512_fp32.pth', 'mlsd'),  # mlsd\u6a21\u578b\n",
+        "        ('body_pose_model.pth', 'openpose'),  # body_pose_model\u6a21\u578b\n",
+        "        ('hand_pose_model.pth', 'openpose'),  # hand_pose_model\u6a21\u578b\n",
+        "        ('upernet_global_small.pth', 'uniformer')  # Segmentation\u7684preprocessor\u6a21\u578b\n",
+        "    ]\n",
         "\n",
+        "    # \u904d\u5386\u6a21\u578b\u5217\u8868\u5e76\u521b\u5efa\u7b26\u53f7\u94fe\u63a5\n",
+        "    for model, directory in models:\n",
+        "        check_model_and_make_symbollink_general(model, './ckpts', copy_or_mount, ccp_dir)\n",
+        "    \n",
         "install_cmd = (' ').join(base_args[:] + [\n",
-        "    'cd /openbayes/home/ComfyUI/custom_nodes','&&',\n",
-        "    'git clone https://github.com/Fannovel16/comfy_controlnet_preprocessors','&&',\n",
-        "    'cd comfy_controlnet_preprocessors','&&',\n",
+        "    f'cd {ccp_dir}','&&',\n",
+        "    'pip uninstall opencv-python -y','&&',\n",
         "    'conda install opencv -y','&&',\n",
         "    'python -V','&&',\n",
+        "    'pwd','&&'\n",
         "    'python install.py'\n",
         "])\n",
         "\n",
