--- a/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
+++ b/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
@@ -807,10 +807,13 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "6f092923-80ac-4e48-afc8-1657ecbac6a9",
-      "metadata": {},
+      "metadata": {
+        "scrolled": true
+      },
       "outputs": [],
       "source": [
-        "!pip install gradio==3.23 -i https://pypi.org/simple"
+        "!pip install gradio==3.23 -i https://pypi.org/simple --user\n",
+        "!pip install clip-interrogator==0.6.0 --prefer-binary -i https://pypi.org/simple --user"
       ]
     },
     {
@@ -2112,6 +2115,14 @@
       "source": [
         "# <i class=\"fa fa-rocket\"></i> \u542f\u52a8Stable-Diffusion-WebUI"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "ae903649-b1dd-4065-98a1-0afb19e558ea",
+      "metadata": {},
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "code",
