update pip install method

--- a/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
+++ b/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
@@ -154,6 +154,18 @@
     {
       "cell_type": "code",
       "execution_count": null,
+      "id": "6f092923-80ac-4e48-afc8-1657ecbac6a9",
+      "metadata": {
+        "scrolled": true
+      },
+      "outputs": [],
+      "source": [
+        "!pip uninstall transformers -y"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "id": "a12f85f3-9e06-4d46-b30b-689dffe8d41f",
       "metadata": {},
       "outputs": [],
@@ -161,25 +173,41 @@
         "import subprocess\n",
         "\n",
         "libraries_to_install = [\n",
-        "\n",
+        "    'gradio==3.23 -i https://pypi.org/simple',\n",
+        "    'clip-interrogator==0.6.0 --prefer-binary -i https://pypi.org/simple',\n",
+        "    'transformers -i https://pypi.org/simple'\n",
         "]\n",
         "\n",
         "tools_to_install = [\n",
         "    \"iputils-ping\",\n",
         "]\n",
         "\n",
-        "installed_libraries = subprocess.run([\"pip\", \"freeze\"], capture_output=True).stdout.decode().split(\"\\n\")\n",
+        "def extract_library_name(library):\n",
+        "    \"\"\"\u4ece\u5e93\u540d\u4e2d\u63d0\u53d6\u51fa\u5305\u7684\u540d\u79f0\"\"\"\n",
+        "    return library.split(\"==\")[0]\n",
         "\n",
-        "# \u5c1d\u8bd5\u5b89\u88c5\u6240\u6709\u672a\u5b89\u88c5\u7684\u5e93\n",
-        "for library in libraries_to_install:\n",
-        "    if library == \"black[jupyter]\" and any(\"black\" in installed_library for installed_library in installed_libraries):\n",
-        "        print(f\"\u3010 {library} \u3011\u5df2\u7ecf\u5b89\u88c5\uff0c\u8df3\u8fc7\u5b89\u88c5\")\n",
-        "        continue\n",
-        "    elif not any(library in installed_library for installed_library in installed_libraries):\n",
-        "        !pip install $library\n",
-        "    else:\n",
-        "        print(f\"\u3010 {library} \u3011\u5df2\u7ecf\u5b89\u88c5\uff0c\u8df3\u8fc7\u5b89\u88c5\")\n",
-        "        \n",
+        "def get_installed_libraries():\n",
+        "    \"\"\"\u83b7\u53d6\u5df2\u5b89\u88c5\u7684\u5e93\u5217\u8868\"\"\"\n",
+        "    output = subprocess.check_output([\"pip\", \"freeze\"])\n",
+        "    installed_libraries = output.decode().split(\"\\n\")\n",
+        "    return set([extract_library_name(library) for library in installed_libraries])\n",
+        "\n",
+        "def install_library(library):\n",
+        "    \"\"\"\u5b89\u88c5\u6307\u5b9a\u7684\u5e93\"\"\"\n",
+        "    !pip install $library --user\n",
+        "\n",
+        "# \u83b7\u53d6\u5df2\u5b89\u88c5\u7684\u5e93\u5217\u8868\n",
+        "installed_libraries = get_installed_libraries()\n",
+        "\n",
+        "# \u627e\u51fa\u672a\u5b89\u88c5\u7684\u5e93\u5e76\u5b89\u88c5\n",
+        "libraries_to_install_filtered = [library for library in libraries_to_install if extract_library_name(library) not in installed_libraries]\n",
+        "if libraries_to_install_filtered:\n",
+        "    print(f\"\u4ee5\u4e0b\u5e93\u5c06\u88ab\u5b89\u88c5\uff1a{libraries_to_install_filtered}\")\n",
+        "    for library in libraries_to_install_filtered:\n",
+        "        install_library(library)\n",
+        "else:\n",
+        "    print(\"\u6240\u6709\u9700\u8981\u5b89\u88c5\u7684\u5e93\u90fd\u5df2\u7ecf\u5b89\u88c5\u3002\")\n",
+        "\n",
         "# \u5c1d\u8bd5\u5b89\u88c5\u6240\u6709\u672a\u5b89\u88c5\u7684\u5de5\u5177\n",
         "update_needed = False\n",
         "for tool in tools_to_install:\n",
@@ -801,19 +829,6 @@
         "\n",
         "\n",
         "# clear_output(wait=True)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "6f092923-80ac-4e48-afc8-1657ecbac6a9",
-      "metadata": {
-        "scrolled": true
-      },
-      "outputs": [],
-      "source": [
-        "!pip install gradio==3.23 -i https://pypi.org/simple --user\n",
-        "!pip install clip-interrogator==0.6.0 --prefer-binary -i https://pypi.org/simple --user"
       ]
     },
     {
@@ -2115,14 +2130,6 @@
       "source": [
         "# <i class=\"fa fa-rocket\"></i> \u542f\u52a8Stable-Diffusion-WebUI"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "ae903649-b1dd-4065-98a1-0afb19e558ea",
-      "metadata": {},
-      "outputs": [],
-      "source": []
     },
     {
       "cell_type": "code",
