--- a/tools/proxy_tools/clash_install_and_setup.ipynb
+++ b/tools/proxy_tools/clash_install_and_setup.ipynb
@@ -76,7 +76,7 @@
         "import time\n",
         "\n",
         "def download_and_install_clash(root_dir, clash_install_dir, clash_run_dir):\n",
-        "    def get_latest_clash_download_url(retries=3, backoff=5):\n",
+        "    def get_latest_clash_download_url(retries=1, backoff=1):\n",
         "        url = 'https://api.github.com/repos/Dreamacro/clash/releases/latest'\n",
         "\n",
         "        for _ in range(retries):\n",
@@ -99,17 +99,17 @@
         "    if not download_url:\n",
         "        print('\u83b7\u53d6\u6700\u65b0\u7248\u672c\u4e0b\u8f7d\u94fe\u63a5\u5931\u8d25')\n",
         "        # return\n",
-        "\n",
-        "    os.makedirs(os.path.join(root_dir, clash_install_dir), exist_ok=True)\n",
-        "    os.makedirs(os.path.join(root_dir, clash_run_dir), exist_ok=True)\n",
-        "    \n",
         "    if not download_url:\n",
         "        file_name = 'clash-linux-amd64-v1.14.0.gz'\n",
         "        latest_version = '1.14.0'\n",
         "    else:\n",
         "        file_name = download_url.split('/')[-1]\n",
+        "        \n",
+        "    os.makedirs(os.path.join(root_dir, clash_install_dir), exist_ok=True)\n",
+        "    os.makedirs(os.path.join(root_dir, clash_run_dir), exist_ok=True)\n",
+        "\n",
         "    local_path = os.path.join(root_dir, clash_install_dir, file_name)\n",
-        "    run_path = os.path.join(root_dir, clash_run_dir, file_name)\n",
+        "    run_path = os.path.join(root_dir, clash_run_dir, 'clash')\n",
         "    \n",
         "    if not os.path.exists(local_path):\n",
         "        os.system(f'wget -P {os.path.join(root_dir, clash_install_dir)} {download_url}')\n",
