fix dependences install

--- a/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
+++ b/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
@@ -173,9 +173,7 @@
         "import subprocess\n",
         "\n",
         "libraries_to_install = [\n",
-        "    'gradio==3.23 -i https://pypi.org/simple',\n",
-        "    'clip-interrogator==0.6.0 --prefer-binary -i https://pypi.org/simple',\n",
-        "    'transformers -i https://pypi.org/simple'\n",
+        "\n",
         "]\n",
         "\n",
         "tools_to_install = [\n",
@@ -2129,6 +2127,20 @@
       "metadata": {},
       "source": [
         "# <i class=\"fa fa-rocket\"></i> \u542f\u52a8Stable-Diffusion-WebUI"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "d042e8b7-bcd7-468e-84ff-b8da97d73c53",
+      "metadata": {
+        "scrolled": true
+      },
+      "outputs": [],
+      "source": [
+        "!pip install gradio==3.23 -i https://pypi.org/simple\n",
+        "!pip install clip-interrogator==0.6.0 --prefer-binary -i https://pypi.org/simple\n",
+        "!pip install transformers -i https://pypi.org/simple"
       ]
     },
     {
